# kube-rs-echo-operator

./: Cargo.toml  Makefile  my-echo.yaml
operator/: Cargo.toml  build.rs  echo-crd.yaml
operator/src/: main.rs
resources/: Cargo.toml
resources/src/: lib.rs
